fix alignment of footer on mobile

--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -32,6 +32,7 @@ body > footer {
 				"foot_nav"
 				"foot_copyright";
 			grid-row-gap: 1em;
+			justify-items: center;
 			text-align: center;
 		}
 	}
